# dog-sports-sso

./: .gitignore  README.md  docker-compose.yml
backend/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/src/: common.py  db.py  endpoint.py  model.py
frontend/: package-lock.json  package.json
frontend/dog-sports-sso/: README.md  package-lock.json  package.json
frontend/dog-sports-sso/src/: App.vue  main.js
frontend/dog-sports-sso/src/components/: CreateAccount.vue  DashBoard.vue  LoginScreen.vue  ModifyAccount.vue  ModifyProfile.vue
